--- a/src/main/resources/app.fxml
+++ b/src/main/resources/app.fxml
@@ -6,22 +6,73 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            minHeight="600.0" minWidth="500.0"
+            minHeight="650.0" minWidth="450.0"
             fx:controller="simulation.AppController">
     <center>
         <VBox alignment="CENTER">
             <Label text="test"  textAlignment="CENTER"/>
+
             <HBox alignment="CENTER">
                 <Label text="Initial animal count "/>
                 <TextField fx:id="animalCountField" maxWidth="50"/>
             </HBox>
+
             <HBox alignment="CENTER">
                 <Label text="Initial grass count "/>
                 <TextField fx:id="grassCountField" maxWidth="50"/>
             </HBox>
-            <Button text="Run simulation" onAction="#runSimulation" alignment="BOTTOM_CENTER"/>
+
+            <HBox alignment="CENTER">
+                <Label text="genome mutation types "/>
+                <ComboBox fx:id="mutationSelect">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="pełna losowość"/>
+                            <String fx:value="lekka korekta"/>
+                        </FXCollections>
+                    </items>
+                    <value>
+                        <String fx:value="pełna losowość"/>
+                    </value>
+                </ComboBox>
+            </HBox>
+
+            <HBox alignment="CENTER">
+                <Label text="grass types "/>
+                <ComboBox fx:id="grassSelect">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="zalesione równiki"/>
+                            <String fx:value="życiodajne truchła "/>
+                        </FXCollections>
+                    </items>
+                    <value>
+                        <String fx:value="zalesione równiki"/>
+                    </value>
+                </ComboBox>
+            </HBox>
+
+            <HBox alignment="CENTER">
+                <Label text="saved config presets "/>
+                <ComboBox fx:id="configSelect">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="default"/>
+                            <String fx:value="config 2"/>
+                        </FXCollections>
+                    </items>
+                    <value>
+                        <String fx:value="default"/>
+                    </value>
+                </ComboBox>
+            </HBox>
+
+            <Button text="Run simulation" onAction="#runSimulation"/>
         </VBox>
     </center>
 </BorderPane>
