--- a/src/main/resources/simulation.fxml
+++ b/src/main/resources/simulation.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.GridPane?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.Cursor?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="700.0" minWidth="800.0">
@@ -13,6 +14,11 @@
     <Label fx:id="infoLabel" text="test" textAlignment="CENTER"/>
     <Label fx:id="moveInfo"/>
     <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="CENTER"/>
+    <Button onAction="#pause" text="Pause">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
 </VBox>
 </center>
 </BorderPane>
