--- a/src/main/resources/simulation.fxml
+++ b/src/main/resources/simulation.fxml
@@ -11,17 +11,14 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="850.0" minWidth="850.0">
-<right>
+<center>
     <VBox alignment="CENTER">
         <Label fx:id="infoLabel" text="Day 1" textAlignment="CENTER"/>
         <Label/>
 
         <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="CENTER" onMouseClicked="#click"/>
-        <padding>
-            <Insets right="10"/>
-        </padding>
     </VBox>
-</right>
+</center>
 
 <left>
     <VBox alignment="CENTER">
@@ -59,7 +56,7 @@
         </HBox>
 
         <Label/>
-        <Button onAction="#pause" text="Pause">
+        <Button fx:id="pauseButton" onAction="#pause" text="Pause">
             <cursor>
                 <Cursor fx:constant="HAND"/>
             </cursor>
