--- a/src/main/resources/simulation.fxml
+++ b/src/main/resources/simulation.fxml
@@ -11,52 +11,29 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="850.0" minWidth="850.0">
-<center>
+<right>
     <VBox alignment="CENTER">
-        <Label fx:id="infoLabel" text="Day 1" textAlignment="CENTER"/>
-        <Label/>
-
+        <Label fx:id="infoLabel" text="test" textAlignment="CENTER"/>
+        <Label fx:id="moveInfo"/>
         <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="CENTER" onMouseClicked="#click"/>
+        <padding>
+            <Insets right="10"/>
+        </padding>
     </VBox>
-</center>
+</right>
 
 <left>
     <VBox alignment="CENTER">
         <Label text="Simulation statistics" style="-fx-font-weight: bold"/>
         <Label/>
 
-        <HBox alignment="CENTER_LEFT">
+        <HBox alignment="CENTER">
             <Label text="Animal count: "/>
             <Label fx:id="animalCountLabel"/>
         </HBox>
 
-        <HBox alignment="CENTER_LEFT">
-            <Label text="Grass count: "/>
-            <Label fx:id="grassCountLabel"/>
-        </HBox>
-
-        <HBox alignment="CENTER_LEFT">
-            <Label text="Empty tiles: "/>
-            <Label fx:id="emptyTilesLabel"/>
-        </HBox>
-
-        <HBox alignment="CENTER_LEFT">
-            <Label text="Average energy: "/>
-            <Label fx:id="avgEnergyLabel"/>
-        </HBox>
-
-        <HBox alignment="CENTER_LEFT">
-            <Label text="Average lifespan: "/>
-            <Label fx:id="avgLifespanLabel"/>
-        </HBox>
-
-        <HBox alignment="CENTER_LEFT">
-            <Label text="Average child count: "/>
-            <Label fx:id="avgChildCountLabel"/>
-        </HBox>
-
         <Label/>
-        <Button fx:id="pauseButton" onAction="#pause" text="Pause">
+        <Button onAction="#pause" text="Pause">
             <cursor>
                 <Cursor fx:constant="HAND"/>
             </cursor>
