--- a/src/main/resources/app.fxml
+++ b/src/main/resources/app.fxml
@@ -11,7 +11,7 @@
     <VBox alignment="CENTER">
         <Label text="Darwin World" style="-fx-font-weight: bold"/>
         <padding>
-            <Insets top="15"/>
+            <Insets top="15" bottom="15"/>
         </padding>
     </VBox>
 </top>
@@ -37,6 +37,11 @@
         <HBox alignment="CENTER">
             <Label text="Grass energy bonus "/>
             <TextField fx:id="grassEnergyField" maxWidth="50"/>
+        </HBox>
+
+        <HBox alignment="CENTER">
+            <Label text="Daily energy loss "/>
+            <TextField fx:id="energyLossField" maxWidth="50"/>
         </HBox>
 
         <HBox alignment="CENTER">
