--- a/src/main/resources/simulation.fxml
+++ b/src/main/resources/simulation.fxml
@@ -13,9 +13,6 @@
             minHeight="850.0" minWidth="850.0">
 <center>
     <VBox alignment="CENTER">
-        <Label fx:id="infoLabel" text="Day 1" textAlignment="CENTER"/>
-        <Label/>
-
         <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="CENTER" onMouseClicked="#click"/>
     </VBox>
 </center>
@@ -24,6 +21,11 @@
     <VBox alignment="CENTER">
         <Label text="Simulation statistics" style="-fx-font-weight: bold"/>
         <Label/>
+
+        <HBox alignment="CENTER_LEFT">
+            <Label text="Day: "/>
+            <Label fx:id="infoLabel" text="1"/>
+        </HBox>
 
         <HBox alignment="CENTER_LEFT">
             <Label text="Animal count: "/>
