--- a/src/main/resources/app.fxml
+++ b/src/main/resources/app.fxml
@@ -56,6 +56,7 @@
                     <FXCollections fx:factory="observableArrayList">
                         <String fx:value="equatorial forests"/>
                         <String fx:value="invigorating corpses"/>
+                        <String fx:value="grass"/>
                     </FXCollections>
                 </items>
                 <value>
